--- a/mainaccount/build.gradle
+++ b/mainaccount/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'java'
 }
 
-group = 'com.seflaccounting'
+group = 'com.selfaccounting'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -30,6 +30,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation files('../lib/restapi-0.0.1-plain.jar')
 }
 
 dependencyManagement {
