--- a/mainaccount/build.gradle
+++ b/mainaccount/build.gradle
@@ -31,7 +31,11 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.4.2.Final'
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
     implementation files('../lib/restapi-0.0.1-plain.jar')
+
 }
 
 dependencyManagement {
